code link added
- added the link to gitHub repository;
- updated the styling for span elements in temperature chart on the bottom;

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               width="50px"
             />
             <br />
-            <span class="bold">23°C</span>/19°C
+            <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
           <div class="col">
             Tue <br />
@@ -107,7 +107,7 @@
               width="50px"
             />
             <br />
-            <span class="bold">23°C</span>/19°C
+            <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
           <div class="col">
             Wed <br />
@@ -117,7 +117,7 @@
               width="50px"
             />
             <br />
-            23°C/19°C
+            <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
           <div class="col">
             Thur <br />
@@ -127,7 +127,7 @@
               width="50px"
             />
             <br />
-            23°C/19°C
+            <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
           <div class="col">
             Fri <br />
@@ -137,13 +137,13 @@
               width="50px"
             />
             <br />
-            23°C/19°C
+            <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
         </div>
       </section>
       <footer>
         <hr />
-        Open-source code by Dana
+        <a href="https://github.com/DanaKLym/SheCodes-weather-app" target="_blank" class="githubLink">Open-source code</a> by Dana
       </footer>
       <script src="src/index.js"></script>
     </div>
