--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/876/original/sunny.png?1656363351"
                 alt="weather Image"
                 class="mainImage"
+                id="mainImageElement"
               />
               <br />
               <span class="mainDegrees"></span>
@@ -95,6 +96,7 @@
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
               alt="sun and clouds"
               width="50px"
+              id="firstLowerWeatherIcon"
             />
             <br />
             <span class="boldTemperatureDigits">23°C</span>/19°C
@@ -105,6 +107,7 @@
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/873/original/clouds.png?1656363299"
               alt="clouds"
               width="50px"
+              id="secondLowerWeatherIcon"
             />
             <br />
             <span class="boldTemperatureDigits">23°C</span>/19°C
@@ -115,6 +118,7 @@
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/874/original/raining.png?1656363326"
               alt="rain"
               width="50px"
+              id="thirdLowerWeatherIcon"
             />
             <br />
             <span class="boldTemperatureDigits">23°C</span>/19°C
@@ -125,6 +129,7 @@
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/876/original/sunny.png?1656363351"
               alt="sunny"
               width="50px"
+              id="fourthLowerWeatherIcon"
             />
             <br />
             <span class="boldTemperatureDigits">23°C</span>/19°C
@@ -135,6 +140,7 @@
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
               alt="sun and clouds"
               width="50px"
+              id="fifthLowerWeatherIcon"
             />
             <br />
             <span class="boldTemperatureDigits">23°C</span>/19°C
