--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
             type="text"
             placeholder="search"
             autofocus
+            autocomplete="off"
             class="search-input"
             id="city-search"
           />
-          <input type="submit" value="Go!" class="btn btn-outline-light" />
-          <button class="btn btn-outline-light" id="location-button">📍</button>
+          <input type="submit" value="Go!" class="btn" />
+          <button class="btn" id="location-button">📍</button>
         </form>
       </header>
       <section class="mainWeather">
         <h1 class="mainCity"></h1>
         <p>
-          <span class="dateTime"></span> <br /><span id="description">
-            
-          </span>
+          <span class="dateTime"></span> <br /><span id="description"> </span>
         </p>
         <div class="row">
           <div class="col">
@@ -58,8 +57,8 @@
               <br />
               <span class="mainDegrees"></span>
               <span class="temType">
-                <a href="#" id="celcius">°C</a href="#"> |
-                <a href="#" id="fahrenheit">°F</a href="#">
+                <a href="#" id="celcius" class="active">°C</a> |
+                <a href="#" id="fahrenheit" class="to-be-chosen">°F</a>
               </span>
             </h2>
           </div>
@@ -67,15 +66,15 @@
             <!--<span class="precipitation" id="precipitation"> 
               <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/039/870/original/precipitation.png?1657362106" alt="precipitation-icon" width="20px"/>
               Precipitation: 56% </span>-->
-            <br>
+            <br />
             <span class="humidity">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/871/original/humidity.png?1656363285"
                 alt="humidity-icon"
                 width="20px"
               />
-              Humidity: <span id="humidity"></span>% </span
-            >
+              Humidity: <span id="humidity"></span>%
+            </span>
             <br />
             <span class="wind">
               <img
@@ -83,8 +82,8 @@
                 alt="wind-icon"
                 width="20px"
               />
-              Wind: <span id="wind"></span>m/s </span
-            >
+              Wind: <span id="wind"></span>m/s
+            </span>
           </div>
         </div>
       </section>
@@ -149,7 +148,13 @@
       </section>
       <footer>
         <hr />
-        <a href="https://github.com/DanaKLym/SheCodes-weather-app" target="_blank" class="githubLink">Open-source code</a> by Dana
+        <a
+          href="https://github.com/DanaKLym/SheCodes-weather-app"
+          target="_blank"
+          class="githubLink"
+          >Open-source code</a
+        >
+        by Dana
       </footer>
       <script src="src/index.js"></script>
     </div>
