Included Forecast part in Comment, since it is not functional yet

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           </div>
         </div>
       </section>
+      <!--<hr />
       <section class="lowerWeather">
         <div class="row">
           <div class="col">
@@ -145,7 +146,7 @@
             <span class="boldTemperatureDigits">23°C</span>/19°C
           </div>
         </div>
-      </section>
+      </section>-->
       <footer>
         <hr />
         <a
