Updated buttons design

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             class="search-input"
             id="city-search"
           />
-          <input type="submit" value="Go!" class="btn" />
-          <button class="btn" id="location-button">📍</button>
+          <input type="submit" value="Go!" class="upperBtn" />
+          <button class="upperBtn" id="location-button">📍</button>
         </form>
       </header>
       <section class="mainWeather">
