Updated Forecast section and styled it with CSS

--- a/index.html
+++ b/index.html
@@ -87,66 +87,81 @@
           </div>
         </div>
       </section>
-      <!--<hr />
+      <hr />
       <section class="lowerWeather">
         <div class="row">
           <div class="col">
-            Mon <br />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-              alt="sun and clouds"
-              width="50px"
-              id="firstLowerWeatherIcon"
-            />
-            <br />
-            <span class="boldTemperatureDigits">23°C</span>/19°C
+            <div class="forecastWeekDays">Mon</div>
+            <div class="forecastImage">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                alt="sun and clouds"
+                width="50px"
+                id="firstLowerWeatherIcon"
+              />
+            </div>
+            <div class="temperatureDigits">
+              <span class="boldTemperatureDigits">23°C</span>/19°C
+            </div>
           </div>
           <div class="col">
-            Tue <br />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/873/original/clouds.png?1656363299"
-              alt="clouds"
-              width="50px"
-              id="secondLowerWeatherIcon"
-            />
-            <br />
-            <span class="boldTemperatureDigits">23°C</span>/19°C
+            <div class="forecastWeekDays">Mon</div>
+            <div class="forecastImage">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                alt="sun and clouds"
+                width="50px"
+                id="firstLowerWeatherIcon"
+              />
+            </div>
+            <div class="temperatureDigits">
+              <span class="boldTemperatureDigits">23°C</span>/19°C
+            </div>
           </div>
           <div class="col">
-            Wed <br />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/874/original/raining.png?1656363326"
-              alt="rain"
-              width="50px"
-              id="thirdLowerWeatherIcon"
-            />
-            <br />
-            <span class="boldTemperatureDigits">23°C</span>/19°C
+            <div class="forecastWeekDays">Mon</div>
+            <div class="forecastImage">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                alt="sun and clouds"
+                width="50px"
+                id="firstLowerWeatherIcon"
+              />
+            </div>
+            <div class="temperatureDigits">
+              <span class="boldTemperatureDigits">23°C</span>/19°C
+            </div>
           </div>
           <div class="col">
-            Thur <br />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/876/original/sunny.png?1656363351"
-              alt="sunny"
-              width="50px"
-              id="fourthLowerWeatherIcon"
-            />
-            <br />
-            <span class="boldTemperatureDigits">23°C</span>/19°C
+            <div class="forecastWeekDays">Mon</div>
+            <div class="forecastImage">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                alt="sun and clouds"
+                width="50px"
+                id="firstLowerWeatherIcon"
+              />
+            </div>
+            <div class="temperatureDigits">
+              <span class="boldTemperatureDigits">23°C</span>/19°C
+            </div>
           </div>
           <div class="col">
-            Fri <br />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-              alt="sun and clouds"
-              width="50px"
-              id="fifthLowerWeatherIcon"
-            />
-            <br />
-            <span class="boldTemperatureDigits">23°C</span>/19°C
+            <div class="forecastWeekDays">Mon</div>
+            <div class="forecastImage">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                alt="sun and clouds"
+                width="50px"
+                id="firstLowerWeatherIcon"
+              />
+            </div>
+            <div class="temperatureDigits">
+              <span class="boldTemperatureDigits">23°C</span>/19°C
+            </div>
           </div>
         </div>
-      </section>-->
+      </section>
       <footer>
         <hr />
         <a
