fixed some HTML issues and strated to build JS forecast

--- a/index.html
+++ b/index.html
@@ -88,64 +88,8 @@
         </div>
       </section>
       <hr />
-      <section class="lowerWeather">
+      <section class="lowerWeather" id="forecast">
         <div class="row">
-          <div class="col">
-            <div class="forecastWeekDays">Mon</div>
-            <div class="forecastImage">
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-                alt="sun and clouds"
-                width="50px"
-                id="firstLowerWeatherIcon"
-              />
-            </div>
-            <div class="temperatureDigits">
-              <span class="boldTemperatureDigits">23°C</span>/19°C
-            </div>
-          </div>
-          <div class="col">
-            <div class="forecastWeekDays">Mon</div>
-            <div class="forecastImage">
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-                alt="sun and clouds"
-                width="50px"
-                id="firstLowerWeatherIcon"
-              />
-            </div>
-            <div class="temperatureDigits">
-              <span class="boldTemperatureDigits">23°C</span>/19°C
-            </div>
-          </div>
-          <div class="col">
-            <div class="forecastWeekDays">Mon</div>
-            <div class="forecastImage">
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-                alt="sun and clouds"
-                width="50px"
-                id="firstLowerWeatherIcon"
-              />
-            </div>
-            <div class="temperatureDigits">
-              <span class="boldTemperatureDigits">23°C</span>/19°C
-            </div>
-          </div>
-          <div class="col">
-            <div class="forecastWeekDays">Mon</div>
-            <div class="forecastImage">
-              <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
-                alt="sun and clouds"
-                width="50px"
-                id="firstLowerWeatherIcon"
-              />
-            </div>
-            <div class="temperatureDigits">
-              <span class="boldTemperatureDigits">23°C</span>/19°C
-            </div>
-          </div>
           <div class="col">
             <div class="forecastWeekDays">Mon</div>
             <div class="forecastImage">
@@ -162,8 +106,8 @@
           </div>
         </div>
       </section>
+      <hr />
       <footer>
-        <hr />
         <a
           href="https://github.com/DanaKLym/SheCodes-weather-app"
           target="_blank"
@@ -172,7 +116,8 @@
         >
         by Dana
       </footer>
-      <script src="src/index.js"></script>
     </div>
+
+    <script src="src/index.js"></script>
   </body>
 </html>
