Set forecast data

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="forecastWeekDays">Mon</div>
             <div class="forecastImage">
               <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/038/875/original/sun_and_clouds.png?1656363338"
+                src="media/02d.png"
                 alt="sun and clouds"
                 width="50px"
                 id="firstLowerWeatherIcon"
