--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/63816326a5.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/63816326a5.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -37,7 +37,9 @@
             id="city-search"
           />
           <input type="submit" value="Go!" class="upperBtn" />
-          <button class="upperBtn" id="location-button">📍</button>
+          <button class="upperBtn" id="location-button">
+            <i class="fa-solid fa-house-chimney-heart"></i>
+          </button>
         </form>
       </header>
       <section class="mainWeather">
