--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             id="city-search"
           />
           <input type="submit" value="Go!" class="upperBtn" />
-          <button class="upperBtn" id="location-button">
-            <i class="fa-solid fa-house-chimney-heart"></i>
-          </button>
+          <button class="upperBtn" id="location-button"></button>
         </form>
       </header>
       <section class="mainWeather">
