Location icon update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             id="city-search"
           />
           <input type="submit" value="Go!" class="upperBtn" />
-          <button class="upperBtn" id="location-button"></button>
+          <button class="upperBtn" id="location-button">🏡</button>
         </form>
       </header>
       <section class="mainWeather">
