Cleaned the code from unnecessary elements

--- a/index.html
+++ b/index.html
@@ -84,24 +84,7 @@
         </div>
       </section>
       <hr />
-      <section class="lowerWeather" id="forecast">
-        <div class="row">
-          <div class="col">
-            <div class="forecastWeekDays">Mon</div>
-            <div class="forecastImage">
-              <img
-                src="media/02d.png"
-                alt="sun and clouds"
-                width="50px"
-                id="firstLowerWeatherIcon"
-              />
-            </div>
-            <div class="temperatureDigits">
-              <span class="boldTemperatureDigits">23°C</span>/19°C
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="lowerWeather" id="forecast"></section>
       <hr />
       <footer>
         <a
