added imperial convertion of wind speed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 alt="wind-icon"
                 width="20px"
               />
-              Wind: <span id="wind"></span>m/s
+              Wind:
+              <span id="wind-conversion"><span id="wind"></span> m/s </span>
             </span>
           </div>
         </div>
