alert bugs fixed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 width="20px"
               />
               Wind:
-              <span id="wind-conversion"><span id="wind"></span> m/s </span>
+              <span id="wind"></span><span id="wind-conversion"> m/s </span>
             </span>
           </div>
         </div>
