--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
                 id="mainImageElement"
               />
               <br />
-              <span class="mainDegrees"></span>
-              <span class="temType">
-                <a href="#" id="celcius" class="active">°C</a> |
-                <a href="#" id="fahrenheit" class="to-be-chosen">°F</a>
-              </span>
+              <div class="mainTemperature">
+                <span class="mainDegrees"></span>
+                <span class="temType">
+                  <a href="#" id="celcius" class="active">°C</a> |
+                  <a href="#" id="fahrenheit" class="to-be-chosen">°F</a>
+                </span>
+              </div>
             </h2>
           </div>
           <div class="col">
