--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             id="city-search"
           />
           <input type="submit" value="Go!" class="upperBtn" />
-          <button class="upperBtn" id="location-button">🏡</button>
+          <button class="upperBtn" id="location-button">
+            <img src="/media/home.png" alt="current location" width="15px" />
+          </button>
         </form>
+        <h1 class="mainCity"></h1>
       </header>
       <section class="mainWeather">
-        <h1 class="mainCity"></h1>
         <p>
           <span class="dateTime"></span> <br /><span id="description"> </span>
         </p>
